--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<div class="container" id="container"></div>
 	<script type="text/javascript" src="app.js"></script>
+	<script type="text/javascript" src="./node_modules/systemjs/dist/system.js"></script>
 </body>
 </html>
 <div todo='[[Todo ID]]' class="list-group-item}">
