Add style sheets, and partials folder for angular2 templates

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,8 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Learn AngularJS2: The Basics</title>
-<!-- 	<link rel="stylesheet" type="text/css" href="css/styles.css">
- -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/app-details.css">
+  <link rel="stylesheet" type="text/css" href="css/app-items.css">
+  <link rel="stylesheet" type="text/css" href="css/app.css">
+
 	<script src="js/lib/angular2/es6-shim.min.js"></script>
     <script src="js/lib/angular2/system-polyfills.js"></script>
     <script src="js/lib/angular2/angular2-polyfills.js"></script>
